--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -2503,6 +2503,125 @@ select {
   }
 }
 
+.pagination-container {
+  margin-top: 1.5rem;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+@media (min-width: 640px) {
+  .pagination-container {
+    margin-top: 2rem;
+    gap: 0.75rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .pagination-container {
+    margin-top: 2.5rem;
+    gap: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .pagination-container {
+    width: auto;
+  }
+}
+
+.pagination-btn {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  border-radius: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (min-width: 640px) {
+  .pagination-btn {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+.pagination-btn-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 173 168 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.pagination-btn-primary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(28 133 132 / var(--tw-bg-opacity, 1));
+}
+
+.pagination-btn-primary:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(110 218 209 / var(--tw-ring-opacity, 1));
+}
+
+.pagination-btn-secondary {
+  cursor: default;
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 102 207 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.pagination-btn-secondary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 70 179 / var(--tw-bg-opacity, 1));
+}
+
+.pagination-btn-secondary:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(217 186 237 / var(--tw-ring-opacity, 1));
+}
+
+.pagination-btn-tertiary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 88 252 / var(--tw-bg-opacity, 1));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.pagination-btn-tertiary:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 58 241 / var(--tw-bg-opacity, 1));
+}
+
+.pagination-btn-tertiary:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(158 159 255 / var(--tw-ring-opacity, 1));
+}
+
 .price-foil {
   display: inline-block;
   border-radius: 0.375rem;
