--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -1841,6 +1841,10 @@ select {
   margin-right: 0.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -1897,6 +1901,10 @@ select {
   width: 50%;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -1947,6 +1955,10 @@ select {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2010,6 +2022,11 @@ select {
   border-color: rgb(209 246 241 / var(--tw-border-opacity, 1));
 }
 
+.border-teal-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
@@ -2045,9 +2062,19 @@ select {
   padding-right: 0.25rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 
 .py-2 {
@@ -2159,6 +2186,11 @@ select {
 .text-teal-500 {
   --tw-text-opacity: 1;
   color: rgb(40 173 168 / var(--tw-text-opacity, 1));
+}
+
+.text-teal-700 {
+  --tw-text-opacity: 1;
+  color: rgb(26 107 106 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -4426,6 +4458,11 @@ select {
   --tw-ring-inset: inset;
 }
 
+.focus\:ring-teal-200:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(163 236 227 / var(--tw-ring-opacity, 1));
+}
+
 .active\:text-purple-200:active {
   --tw-text-opacity: 1;
   color: rgb(233 217 245 / var(--tw-text-opacity, 1));
@@ -4587,6 +4624,11 @@ select {
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
