--- a/src/http/views/partials/pagination.hbs
+++ b/src/http/views/partials/pagination.hbs
@@ -1,3 +1,4 @@
+{{#unless eq pagination.totalPages 1}}
 <section class="pagination-container">
     {{#if pagination.hasPrevPage}}
     <a href="{{pagination.baseUrl}}/page/1/limit/{{pagination.limit}}"
@@ -41,9 +42,9 @@
         <select id="limit" name="limit" class="input-field w-20 text-center py-1 pl-0 pr-2 
                 text-xs sm:text-sm bg-white border border-teal-300 rounded focus:ring-2 
                 focus:ring-teal-200 focus:outline-none">
-            <option value="10" {{#if (eq pagination.limit 10)}}selected{{/if}}>10</option>
-            <option value="20" {{#if (eq pagination.limit 20)}}selected{{/if}}>20</option>
+            <option value="25" {{#if (eq pagination.limit 25)}}selected{{/if}}>25</option>
             <option value="50" {{#if (eq pagination.limit 50)}}selected{{/if}}>50</option>
+            <option value="100" {{#if (eq pagination.limit 100)}}selected{{/if}}>100</option>
         </select>
         <label for="limit" class="text-sm font-medium text-teal-700">per page</label>
     </form>
@@ -56,3 +57,4 @@
         });
     </script>
 </section>
+{{/unless}}
