--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -2062,11 +2062,6 @@ select {
   padding-right: 0.25rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -2085,6 +2080,10 @@ select {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.pl-0 {
+  padding-left: 0px;
 }
 
 .pl-2 {
@@ -2614,24 +2613,23 @@ select {
 }
 
 .pagination-btn-secondary {
+  pointer-events: none;
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   cursor: default;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(26 84 85 / var(--tw-border-opacity, 1));
   --tw-bg-opacity: 1;
-  background-color: rgb(168 102 207 / var(--tw-bg-opacity, 1));
+  background-color: rgb(28 133 132 / var(--tw-bg-opacity, 1));
+  font-weight: 700;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.pagination-btn-secondary:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(140 70 179 / var(--tw-bg-opacity, 1));
-}
-
-.pagination-btn-secondary:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(217 186 237 / var(--tw-ring-opacity, 1));
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  /* Extra emphasis: bold, strong border, shadow, slightly larger, not clickable */
 }
 
 .pagination-btn-tertiary {
