--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -1800,6 +1800,10 @@ select {
   top: 0px;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -1979,6 +1983,10 @@ select {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .text-ellipsis {
   text-overflow: ellipsis;
 }
@@ -2027,6 +2035,10 @@ select {
   border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
 }
 
+.bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
@@ -2055,6 +2067,14 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .px-1 {
