tables, screens adapt to mobile

--- a/src/http/public/css/app.css
+++ b/src/http/public/css/app.css
@@ -24,3 +24,30 @@ input[type="number"] {
 .bg-info {
     background-color: rgb(173 216 230);
 }
+
+@media (max-width: 450px) {
+  table, .table-container, .min-w-full {
+    font-size: 0.7rem !important;
+  }
+  th, td {
+    padding-left: 0.25rem !important;
+    padding-right: 0.25rem !important;
+    padding-top: 0.25rem !important;
+    padding-bottom: 0.25rem !important;
+  }
+  .card-img-preview {
+    max-width: 32px !important;
+    max-height: 32px !important;
+  }
+  .price-normal, .price-foil {
+    font-size: 0.7rem !important;
+  }
+  .xs-hide { display: none !important; }
+  .xs-show { display: block !important; }
+  th.xs-show, td.xs-show { display: table-cell !important; }
+  tr.xs-show { display: table-row !important; }
+}
+
+@media (min-width: 451px) {
+  .xs-show { display: none !important; }
+}
