--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -91,7 +91,7 @@
                     <td class="py-2 text-right">
                         {{#if p.hasFoil}}
                         <span class="price-foil">{{p.foilPrice}}</span>
-                        <span class="foil-badge">Foil</span>
+                        <span class="foil-badge xs-hide">Foil</span>
                         {{/if}}
                     </td>
                 </tr>
