--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -107,7 +107,7 @@
 }
 
 /*
-! tailwindcss v3.4.17 | MIT License | https://tailwindcss.com
+! tailwindcss v3.4.18 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -1800,10 +1800,6 @@ select {
   top: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
 .mx-1 {
   margin-left: 0.25rem;
   margin-right: 0.25rem;
@@ -1855,6 +1851,10 @@ select {
 
 .mt-6 {
   margin-top: 1.5rem;
+}
+
+.mt-8 {
+  margin-top: 2rem;
 }
 
 .block {
@@ -1983,10 +1983,6 @@ select {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.overflow-hidden {
-  overflow: hidden;
-}
-
 .text-ellipsis {
   text-overflow: ellipsis;
 }
@@ -2005,6 +2001,10 @@ select {
 
 .border-b-2 {
   border-bottom-width: 2px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-t-2 {
@@ -2030,13 +2030,14 @@ select {
   border-color: rgb(209 246 241 / var(--tw-border-opacity, 1));
 }
 
+.border-teal-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(163 236 227 / var(--tw-border-opacity, 1));
+}
+
 .border-teal-300 {
   --tw-border-opacity: 1;
   border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
-}
-
-.bg-black\/40 {
-  background-color: rgb(0 0 0 / 0.4);
 }
 
 .bg-gray-200 {
@@ -2059,6 +2060,11 @@ select {
   background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
 }
 
+.bg-teal-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 252 250 / var(--tw-bg-opacity, 1));
+}
+
 .bg-teal-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(40 173 168 / var(--tw-bg-opacity, 1));
@@ -2067,14 +2073,6 @@ select {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-cover {
-  background-size: cover;
-}
-
-.bg-center {
-  background-position: center;
 }
 
 .px-1 {
@@ -2210,6 +2208,11 @@ select {
 .text-teal-700 {
   --tw-text-opacity: 1;
   color: rgb(26 107 106 / var(--tw-text-opacity, 1));
+}
+
+.text-teal-800 {
+  --tw-text-opacity: 1;
+  color: rgb(26 84 85 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
