--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -4,7 +4,7 @@
             <th class="table-header pl-2">Set</th>
             <th class="table-header">Price</th>
             <th class="table-header">Owned</th>
-            <th class="table-header pr-2">Release Date</th>
+            <th class="table-header xs-hide pr-2">Release Date</th>
         </tr>
     </thead>
     <tbody>
@@ -24,7 +24,7 @@
                     </span>
                 </div>
             </td>
-            <td class="py-2 pr-2">{{this.releaseDate}}</td>
+            <td class="py-2 pr-2 xs-hide">{{this.releaseDate}}</td>
         </tr>
         {{/each}}
     </tbody>
