--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -18,10 +18,11 @@
                 <th class="table-header pl-2"># Owned</th>
                 <th class="table-header">Card No.</th>
                 <th class="table-header">Name</th>
-                <th class="table-header">Mana Cost</th>
-                <th class="table-header">Rarity</th>
-                <th class="table-header">Price</th>
-                <th class="table-header pr-2">Foil Price</th>
+                <th class="table-header xs-hide">Mana Cost</th>
+                <th class="table-header xs-hide">Rarity</th>
+                <th class="table-header xs-hide">Price</th>
+                <th class="table-header xs-hide pr-2">Foil Price</th>
+                <th class="table-header xs-show pr-2">Prices</th>
             </tr>
         </thead>
         <tbody>
@@ -38,14 +39,22 @@
                         <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
                     </a>
                 </td>
-                <td class="py-2">{{>manaCost card=this}}</td>
-                <td class="py-2">{{this.rarity}}</td>
-                <td class="py-2">
+                <td class="py-2 xs-hide" {{>manaCost card=this}}</td>
+                <td class="py-2 xs-hide">{{this.rarity}}</td>
+                <td class="py-2 xs-hide">
                     {{#if this.hasNormal}}
                     <span class="price-normal">{{this.normalPrice}}</span>
                     {{/if}}
                 </td>
-                <td class="py-2 pr-2">
+                <td class="py-2 pr-2 xs-hide">
+                    {{#if this.hasFoil}}
+                    <span class="price-foil">{{this.foilPrice}}</span>
+                    {{/if}}
+                </td>
+                <td class="py-2 pr-2 xs-show">
+                    {{#if this.hasNormal}}
+                    <span class="price-normal">{{this.normalPrice}}</span>
+                    {{/if}}
                     {{#if this.hasFoil}}
                     <span class="price-foil">{{this.foilPrice}}</span>
                     {{/if}}
