--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -39,7 +39,7 @@
                         <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
                     </a>
                 </td>
-                <td class="py-2 xs-hide" {{>manaCost card=this}}</td>
+                <td class="py-2 xs-hide">{{>manaCost card=this}}</td>
                 <td class="py-2 xs-hide">{{this.rarity}}</td>
                 <td class="py-2 xs-hide">
                     {{#if this.hasNormal}}
