--- a/src/http/views/partials/footer.hbs
+++ b/src/http/views/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer class="w-full mt-8 py-4 bg-teal-50 border-t border-teal-200 text-center text-sm text-teal-800">
-    &copy; {{year}} I Want My MTG! /mdt.
+    &#9733; I Want My MTG! &#9734; mdt &#9733;
 </footer>
