filter input and clear styles working

--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -1,6 +1,5 @@
-<div class="w-full max-w-5xl mx-auto">
+<div class="w-full mx-auto">
     {{>filter}}
-
     <table class="min-w-full bg-white">
         <thead>
             <tr class="table-header-row">
