--- a/src/http/views/partials/filter.hbs
+++ b/src/http/views/partials/filter.hbs
@@ -2,8 +2,8 @@
     <div class="relative w-full">
         <input type="text" id="filter" name="filter" value="{{filter}}" placeholder="Filter sets..." autocomplete="off"
             class="input-field w-full px-2 py-1 border border-teal-300 rounded pr-12" />
-        <button type="button" id="clear-filter-btn" class="absolute top-1/2 right-2 -translate-y-1/2 p-1 rounded-full bg-white transition-colors duration-150
-                   text-gray-400 hover:text-teal-600 hover:bg-teal-100 active:bg-teal-200 focus:outline-none"
+        <button type="button" id="clear-filter-btn" class="absolute right-3 top-1/2 -translate-y-1/2 z-10 p-1 bg-white transition-colors duration-150
+                   text-gray-400 hover:text-teal-600 focus:outline-none"
             style="display: {{#if filter}}inline{{else}}none{{/if}};" aria-label="Clear filter">&#10005;</button>
     </div>
     <input type="hidden" name="page" value="1" />
