fix keyrune scry fix set symbol setlist pg

--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -13,7 +13,7 @@
             {{#each setList}}
             <tr class="table-row">
                 <td class="py-2 pl-2">
-                    <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
+                    <i class="ss ss-{{this.code}} ss-fw"></i>
                     <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 </td>
                 <td class="py-2">${{this.totalValue}}</td>
