--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -11,7 +11,8 @@
         </ul>
     </section>
 </div>
-<div>
+<div class="w-full mx-auto">
+    {{>filter}}
     <table class="table-container">
         <thead>
             <tr class="table-header-row">
