--- a/src/http/views/partials/filter.hbs
+++ b/src/http/views/partials/filter.hbs
@@ -1,6 +1,6 @@
 <form id="filter-form" method="get" action="{{pagination.baseUrl}}" class="mb-4">
     <div class="relative w-full">
-        <input type="text" id="filter" name="filter" value="{{filter}}" placeholder="Filter sets..." autocomplete="off"
+        <input type="text" id="filter" name="filter" value="{{filter}}" placeholder="Filter..." autocomplete="off"
             class="input-field w-full px-2 py-1 border border-teal-300 rounded pr-12" />
         <button type="button" id="clear-filter-btn" class="absolute right-3 top-1/2 -translate-y-1/2 z-10 p-1 bg-white transition-colors duration-150
                    text-gray-400 hover:text-teal-600 focus:outline-none"
